--- a/app/src/main/res/drawable/gradient_button.xml
+++ b/app/src/main/res/drawable/gradient_button.xml
@@ -3,10 +3,14 @@
 <item>
     <shape>
         <gradient
-            android:angle="90"
-            android:startColor="#C4C4C4"
-            android:endColor="#1433FF"
+            android:angle="-90"
+            android:startColor="#0070FA"
+            android:centerColor="#00C6FF"
+            android:endColor="#EBF4F6"
             android:type="linear" />
+        <corners
+            android:radius="50dp"
+            />
     </shape>
 </item>
 </selector>
