--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -67,14 +67,13 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_bold"
                 />
-<!--            <DatePicker-->
-<!--                android:id="@+id/datePicker1"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:datePickerMode="calendar"-->
-<!--                android:calendarViewShown="false"-->
-<!--                android:-->
-<!--                />-->
+            <DatePicker
+                android:id="@+id/datePicker"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:datePickerMode="spinner"
+                android:spinnersShown="false" />
 
         </LinearLayout>
         <LinearLayout
@@ -84,34 +83,25 @@
             android:background="@drawable/border_black_bg_white"
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/fontf"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_bold"
-                android:text="Chi tiêu"
-                android:textColor="@color/black"
-                android:textSize="28dp" />
-            <EditText
-                android:id="@+id/inputEmail"
-                style="@style/Widget.AppCompat.EditText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/silver_bg_editText"
-                android:fontFamily="@font/poppins_bold"
-                android:layout_marginBottom="36px"
-                android:hint="0" />
+            >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="$"
+                android:text="Chi tiêu"
                 android:textSize="28dp"
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_bold"
                 />
-
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/bg_book_icon"
+                android:inputType="text"
+                android:maxLines="1"
+                android:hint="$"
+                android:textSize="24dp"
+                android:textAlignment="center"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -129,7 +119,13 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_bold"
                 />
-
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/bg_book_icon"
+                android:inputType="text"
+                android:maxLines="1"
+                />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,18 +134,15 @@
             android:background="@drawable/border_black_bg_white"
             android:paddingHorizontal="12dp"
             android:paddingVertical="8dp"
-            android:paddingBottom="40dp"
             android:orientation="vertical"
             >
             <TextView
-
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Loại"
                 android:textColor="@color/black"
                 android:layout_gravity="top"
-
                 android:textSize="28dp" />
             <GridLayout
                 android:layout_width="match_parent"
@@ -159,139 +152,202 @@
                 android:paddingVertical="8dp"
                 android:columnCount="3"
                 android:orientation="horizontal"
-                android:rowCount="3"
+                android:rowCount="4"
                 android:layout_gravity="center"
-
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 >
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginEnd="40dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_food_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_food"
-                    />
+                    android:drawableLeft="@drawable/icon_food" />
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginEnd="40dp"
+                    :layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_car_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_car"
-                    />
+                    android:drawableLeft="@drawable/icon_car" />
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_shop_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_shopbag"
-                    />
+                    android:drawableLeft="@drawable/icon_shopbag" />
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="40dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_gift_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_gift"
-                    />
+                    android:drawableLeft="@drawable/icon_gift" />
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_book_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_book"
-                    />
+                    android:drawableLeft="@drawable/icon_book" />
                 <Button
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_marginEnd="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_heart_icon"
-                    android:textColor="@color/white"
-                    android:fontFamily="@font/poppins_bold"
-                    android:layout_marginEnd="30dp"
-                    app:icon="@drawable/icon_heart"
-                    />
-
+                    android:drawableLeft="@drawable/icon_heart" />
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_row="2"
-                    android:layout_column="0"
                     android:layout_marginEnd="30dp"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:backgroundTint="@color/bg_thunder_icon"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/white"
-                    app:icon="@drawable/icon_bill" />
-
+                    android:drawableLeft="@drawable/icon_bill" />
                 <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_row="3"
-                    android:layout_column="1"
                     android:layout_marginEnd="30dp"
-                    android:backgroundTint="@color/bg_search_icon"
-                    android:fontFamily="@font/poppins_bold"
-                    android:textColor="@color/white"
-                    app:icon="@drawable/icon_diff" />
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:backgroundTint="@color/bg_book_icon"
+                    android:drawableLeft="@drawable/icon_diff" />
+
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_food_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_food"-->
+<!--                    />-->
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_car_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_car"-->
+<!--                    />-->
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_shop_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_shopbag"-->
+<!--                    />-->
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_gift_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_gift"-->
+<!--                    />-->
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_book_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_book"-->
+<!--                    />-->
+<!--                <Button-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:backgroundTint="@color/bg_heart_icon"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    app:icon="@drawable/icon_heart"-->
+<!--                    />-->
+
+<!--                <Button-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    android:backgroundTint="@color/bg_thunder_icon"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    app:icon="@drawable/icon_bill" />-->
+
+<!--                <Button-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:layout_marginEnd="30dp"-->
+<!--                    android:backgroundTint="@color/bg_search_icon"-->
+<!--                    android:fontFamily="@font/poppins_bold"-->
+<!--                    android:textColor="@color/white"-->
+<!--                    app:icon="@drawable/icon_diff" />-->
 
             </GridLayout>
             <Button
-                android:layout_gravity="bottom"
+                android:layout_gravity="center"
                 android:layout_width="300dp"
                 android:layout_height="80dp"
                 android:textColor="@color/white"
                 android:fontFamily="@font/poppins_bold"
-                android:backgroundTint="@color/bg_search_icon"
+                android:backgroundTint="#ACD9E8"
                 android:layout_marginBottom="100dp"
+                android:textSize="24dp"
                 android:text="Xác nhận" />
         </LinearLayout>
 
-<!--        <LinearLayout-->
-<!--            android:orientation="vertical"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:gravity="center"-->
-<!--            android:background="@drawable/border_black_bg_white"-->
-<!--            android:paddingHorizontal="12dp"-->
-<!--            android:paddingVertical="8dp"-->
-<!--            >-->
-<!--            <TextView-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:text="Loại"-->
-<!--                android:textSize="28dp"-->
-<!--                android:textColor="@color/black"-->
-<!--                android:fontFamily="@font/poppins_bold"-->
-<!--                />-->
-<!--            <GridLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:numColumns="3"-->
-<!--                >-->
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="hah1a"-->
-<!--                    />-->
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="haha"-->
-<!--                    />-->
-<!--                <TextView-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:text="haha"-->
-<!--                    />-->
-<!--            </GridLayout>-->
+        <!--        <LinearLayout-->
+        <!--            android:orientation="vertical"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:gravity="center"-->
+        <!--            android:background="@drawable/border_black_bg_white"-->
+        <!--            android:paddingHorizontal="12dp"-->
+        <!--            android:paddingVertical="8dp"-->
+        <!--            >-->
+        <!--            <TextView-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:text="Loại"-->
+        <!--                android:textSize="28dp"-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:fontFamily="@font/poppins_bold"-->
+        <!--                />-->
+        <!--            <GridLayout-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="match_parent"-->
+        <!--                android:numColumns="3"-->
+        <!--                >-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="match_parent"-->
+        <!--                    android:text="hah1a"-->
+        <!--                    />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="match_parent"-->
+        <!--                    android:text="haha"-->
+        <!--                    />-->
+        <!--                <TextView-->
+        <!--                    android:layout_width="match_parent"-->
+        <!--                    android:layout_height="match_parent"-->
+        <!--                    android:text="haha"-->
+        <!--                    />-->
+        <!--            </GridLayout>-->
 
-<!--        </LinearLayout>-->
+        <!--        </LinearLayout>-->
 
     </LinearLayout>
 </LinearLayout>
