--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -67,13 +67,13 @@
                 android:textColor="@color/black"
                 android:fontFamily="@font/poppins_bold"
                 />
-            <DatePicker
-                android:id="@+id/datePicker"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:datePickerMode="spinner"
-                android:spinnersShown="false" />
+<!--            <DatePicker-->
+<!--                android:id="@+id/datePicker"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="16dp"-->
+<!--                android:datePickerMode="spinner"-->
+<!--                android:spinnersShown="false" />-->
 
         </LinearLayout>
         <LinearLayout
@@ -93,6 +93,7 @@
                 android:fontFamily="@font/poppins_bold"
                 />
             <EditText
+                android:id="@+id/inputAmount"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/bg_book_icon"
@@ -137,6 +138,7 @@
             android:orientation="vertical"
             >
             <TextView
+                android:id="@+id/inputNote"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_bold"
