--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -61,6 +60,7 @@
                 android:layout_marginEnd="20dp"
                 />
             <TextView
+                android:id="@+id/numberWallet"
                 android:layout_marginStart="200dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -104,6 +104,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtIncome1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -113,6 +114,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberIncome1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="600$"
@@ -138,6 +140,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtIncome2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -147,6 +150,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberIncome2"
                     android:layout_marginStart="200dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -172,6 +176,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtIncome3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -181,6 +186,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberIncome3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="600$"
@@ -224,6 +230,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtOutcome1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -233,6 +240,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberOutcome1"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="600$"
@@ -258,6 +266,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtOutcome2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -267,6 +276,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberOutcome2"
                     android:layout_marginStart="200dp"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
@@ -292,6 +302,7 @@
                     android:layout_marginEnd="10dp"
                     />
                 <TextView
+                    android:id="@+id/txtOutcome3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Ví"
@@ -301,6 +312,7 @@
                     android:layout_marginEnd="20dp"
                     />
                 <TextView
+                    android:id="@+id/numberOutcome3"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="600$"
