--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -299,6 +299,7 @@
 
             </GridLayout>
             <Button
+                android:id="@+id/btnConfirm"
                 android:layout_gravity="center"
                 android:layout_width="300dp"
                 android:layout_height="80dp"
