--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,8 @@
     <color name="bg_money_icon">#CFFAEA</color>
     <color name="bg_database_icon">#C8D7D8</color>
     <color name="bg_coin_icon">#FC7F57</color>
-    <color name="configrm">#1433FF</color>
-
+    <color name="confirm">#1433FF</color>
+    <color name="bg_chart">#EAF1FF</color>
+    <color name="green">#00BD35</color>
 
 </resources>
