--- a/app/src/main/res/layout/fragment_chart.xml
+++ b/app/src/main/res/layout/fragment_chart.xml
@@ -1,16 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bg_chart"
     tools:context=".MainActivity">
 
-    <com.anychart.AnyChartView
-        android:id="@+id/any_chart_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+   <LinearLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       >
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:gravity="center"
+           >
+
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:background="@drawable/border_black_bg_white"
+               android:paddingHorizontal="12dp"
+               android:paddingVertical="8dp"
+               >
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Chi tiêu"
+                   android:textSize="20dp"
+                   android:textColor="@color/theme_purple"
+                   android:fontFamily="@font/poppins_bold"
+                   android:layout_marginEnd="30dp"
+                   />
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="-80$"
+                   android:textSize="20dp"
+                   android:textColor="@color/red"
+                   android:fontFamily="@font/poppins_bold"
+                   />
+           </LinearLayout>
+           <LinearLayout
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:gravity="center"
+               android:background="@drawable/border_black_bg_white"
+               android:paddingHorizontal="12dp"
+               android:paddingVertical="8dp"
+               >
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="Thu nhập"
+                   android:textSize="20dp"
+                   android:textColor="@color/theme_purple"
+                   android:fontFamily="@font/poppins_bold"
+                   android:layout_marginEnd="30dp"
+                   />
+               <TextView
+                   android:layout_width="wrap_content"
+                   android:layout_height="wrap_content"
+                   android:text="+100$"
+                   android:textSize="20dp"
+                   android:textColor="@color/green"
+                   android:fontFamily="@font/poppins_bold"
+                   />
+           </LinearLayout>
+       </LinearLayout>
+       <LinearLayout
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:gravity="center"
+           android:background="@drawable/border_black_bg_white"
+           android:paddingHorizontal="12dp"
+           android:paddingVertical="8dp"
+           >
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Thu nhập"
+               android:textSize="20dp"
+               android:textColor="@color/theme_purple"
+               android:fontFamily="@font/poppins_bold"
+               android:layout_marginEnd="30dp"
+               />
+           <TextView
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="+100$"
+               android:textSize="20dp"
+               android:textColor="@color/green"
+               android:fontFamily="@font/poppins_bold"
+               />
+       </LinearLayout>
+   </LinearLayout>
+
+        <com.anychart.AnyChartView
+            android:id="@+id/any_chart_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
+</LinearLayout>
